@@ -65,6 +65,7 @@ namespace MeGUI
             this.saveFileDialog = new System.Windows.Forms.SaveFileDialog();
             this.gbInput = new System.Windows.Forms.GroupBox();
             this.lblFPSIn = new System.Windows.Forms.Label();
+            this.fpsChooserIn = new MeGUI.core.gui.FPSChooser();
             this.btInput = new System.Windows.Forms.Button();
             this.input = new System.Windows.Forms.TextBox();
             this.rbFromFile = new System.Windows.Forms.RadioButton();
@@ -73,14 +74,13 @@ namespace MeGUI
             this.closeOnQueue = new System.Windows.Forms.CheckBox();
             this.groupBox1 = new System.Windows.Forms.GroupBox();
             this.lblFPSOut = new System.Windows.Forms.Label();
+            this.fpsChooserOut = new MeGUI.core.gui.FPSChooser();
             this.rbXML = new System.Windows.Forms.RadioButton();
             this.rbQPF = new System.Windows.Forms.RadioButton();
             this.rbTXT = new System.Windows.Forms.RadioButton();
             this.btOutput = new System.Windows.Forms.Button();
             this.output = new System.Windows.Forms.TextBox();
-            this.fpsChooserOut = new MeGUI.core.gui.FPSChooser();
             this.helpButton1 = new MeGUI.core.gui.HelpButton();
-            this.fpsChooserIn = new MeGUI.core.gui.FPSChooser();
             this.chaptersGroupbox.SuspendLayout();
             this.gbInput.SuspendLayout();
             this.groupBox1.SuspendLayout();
@@ -255,6 +255,19 @@ namespace MeGUI
             this.lblFPSIn.TabIndex = 16;
             this.lblFPSIn.Text = "FPS";
             // 
+            // fpsChooserIn
+            // 
+            this.fpsChooserIn.BackColor = System.Drawing.SystemColors.Control;
+            this.fpsChooserIn.Location = new System.Drawing.Point(283, 42);
+            this.fpsChooserIn.MaximumSize = new System.Drawing.Size(1000, 29);
+            this.fpsChooserIn.MinimumSize = new System.Drawing.Size(64, 29);
+            this.fpsChooserIn.Name = "fpsChooserIn";
+            this.fpsChooserIn.NullString = null;
+            this.fpsChooserIn.SelectedIndex = 0;
+            this.fpsChooserIn.Size = new System.Drawing.Size(98, 29);
+            this.fpsChooserIn.TabIndex = 15;
+            this.fpsChooserIn.SelectionChanged += new MeGUI.StringChanged(this.fpsChooserIn_SelectionChanged);
+            // 
             // btInput
             // 
             this.btInput.Location = new System.Drawing.Point(392, 19);
@@ -339,6 +352,17 @@ namespace MeGUI
             this.lblFPSOut.TabIndex = 15;
             this.lblFPSOut.Text = "FPS";
             // 
+            // fpsChooserOut
+            // 
+            this.fpsChooserOut.Location = new System.Drawing.Point(284, 14);
+            this.fpsChooserOut.MaximumSize = new System.Drawing.Size(1000, 29);
+            this.fpsChooserOut.MinimumSize = new System.Drawing.Size(64, 29);
+            this.fpsChooserOut.Name = "fpsChooserOut";
+            this.fpsChooserOut.NullString = null;
+            this.fpsChooserOut.SelectedIndex = 0;
+            this.fpsChooserOut.Size = new System.Drawing.Size(98, 29);
+            this.fpsChooserOut.TabIndex = 14;
+            // 
             // rbXML
             // 
             this.rbXML.AutoSize = true;
@@ -392,17 +416,6 @@ namespace MeGUI
             this.output.Size = new System.Drawing.Size(365, 21);
             this.output.TabIndex = 9;
             // 
-            // fpsChooserOut
-            // 
-            this.fpsChooserOut.Location = new System.Drawing.Point(284, 14);
-            this.fpsChooserOut.MaximumSize = new System.Drawing.Size(1000, 29);
-            this.fpsChooserOut.MinimumSize = new System.Drawing.Size(64, 29);
-            this.fpsChooserOut.Name = "fpsChooserOut";
-            this.fpsChooserOut.NullString = null;
-            this.fpsChooserOut.SelectedIndex = 0;
-            this.fpsChooserOut.Size = new System.Drawing.Size(98, 29);
-            this.fpsChooserOut.TabIndex = 14;
-            // 
             // helpButton1
             // 
             this.helpButton1.ArticleName = "Chapter Creator";
@@ -412,19 +425,6 @@ namespace MeGUI
             this.helpButton1.Name = "helpButton1";
             this.helpButton1.Size = new System.Drawing.Size(38, 23);
             this.helpButton1.TabIndex = 42;
-            // 
-            // fpsChooserIn
-            // 
-            this.fpsChooserIn.BackColor = System.Drawing.SystemColors.Control;
-            this.fpsChooserIn.Location = new System.Drawing.Point(283, 42);
-            this.fpsChooserIn.MaximumSize = new System.Drawing.Size(1000, 29);
-            this.fpsChooserIn.MinimumSize = new System.Drawing.Size(64, 29);
-            this.fpsChooserIn.Name = "fpsChooserIn";
-            this.fpsChooserIn.NullString = null;
-            this.fpsChooserIn.SelectedIndex = 0;
-            this.fpsChooserIn.Size = new System.Drawing.Size(98, 29);
-            this.fpsChooserIn.TabIndex = 15;
-            this.fpsChooserIn.SelectionChanged += new MeGUI.StringChanged(this.fpsChooserIn_SelectionChanged);
             // 
             // ChapterCreator
             // 
@@ -441,7 +441,6 @@ namespace MeGUI
             this.FormBorderStyle = System.Windows.Forms.FormBorderStyle.FixedDialog;
             this.Icon = ((System.Drawing.Icon)(resources.GetObject("$this.Icon")));
             this.MaximizeBox = false;
-            this.MinimizeBox = false;
             this.Name = "ChapterCreator";
             this.Text = "MeGUI - Chapter Creator";
             this.Load += new System.EventHandler(this.ChapterCreator_Load);
